test/corpus/1.txt
================================================================================
Project
================================================================================
Project project_name {
  database_type: 'PostgreSQL'
  Note: 'Description of the project'
}
--------------------------------------------------------------------------------

(source
  (definition
    (keyword)
    (identifier)
    (block
      (note
        (note_start)
          (string))
      (note
        (note_start)
          (string)))))

================================================================================
Table simple
================================================================================
Table core.user {
}
--------------------------------------------------------------------------------

(source
  (definition
    (keyword)
    (identifier)
    (block)))

================================================================================
Table alias
================================================================================
Table core.user as U {
}
--------------------------------------------------------------------------------

(source
  (definition
    (keyword)
    (identifier)
    (identifier)
    (block)))

================================================================================
TableGroup
================================================================================
TableGroup test {
  merchants
  countries
}
--------------------------------------------------------------------------------

(source
  (definition
    (keyword)
    (identifier)
    (block
      (item
        (identifier))
      (item
        (identifier)))))
